--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "react-router-dom": "^7.6.3",
     "vite": "^7.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.10.0",
+    "react-toastify": "^11.0.5"
   }
 }
