--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "react-router-dom": "^7.6.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.0.0"
   },
   "dependencies": {
