--- a/backend/package.json
+++ b/backend/package.json
@@ -5,11 +5,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.1.0",
@@ -18,6 +20,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
-    "nodemon": "^3.1.10"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.10",
+    "openai": "^5.10.2",
+    "pdfkit": "^0.14.0",
+    "uuid": "^9.0.1"
   }
 }
