--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,16 @@
   "dependencies": {
     "axios": "^1.10.0",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "react-hook-form": "^7.48.2",
+    "react-dropzone": "^14.2.3",
+    "react-pdf": "^7.6.0",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "react-quill": "^2.0.0",
+    "react-datepicker": "^4.25.0",
+    "react-select": "^5.8.0",
+    "framer-motion": "^10.16.16",
+    "react-hot-toast": "^2.4.1"
   }
 }
