--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@xenova/transformers": "^2.17.2",
+    "@google/genai": "^1.13.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -22,7 +22,6 @@
     "mongoose": "^8.16.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.10",
-    "openai": "^5.10.2",
     "pdfkit": "^0.14.0",
     "uuid": "^9.0.1"
   }
