--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,23 @@
     "@google/genai": "^1.13.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
+    "docx": "^9.5.1",
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.10.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.10",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.2.0",
+    "pdf2pic": "^3.2.0",
+    "pdfjs-dist": "^5.4.54",
     "pdfkit": "^0.14.0",
     "uuid": "^9.0.1"
   }
