--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "pdf2pic": "^3.2.0",
     "pdfjs-dist": "^5.4.54",
     "pdfkit": "^0.14.0",
+    "retell-sdk": "^4.42.0",
     "uuid": "^9.0.1"
   }
 }
