--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-pdf": "^7.6.0",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "retell-client-js-sdk": "^2.0.7"
   }
 }
